# gym-electric-motor

./: .buildinfo  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  Simple_Controllers.ipynb  batchprocessing_ex.py  genindex.html  index.html  issue_testing.ipynb  objects.inv  pmsm_mpc_dq_current_control.ipynb  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: build_and_test.yml  pypi-publish.yml
JOSS/: paper.html
_modules/: index.html
_modules/gym_electric_motor/: callbacks.html  constraint_monitor.html  constraints.html  core.html  random_component.html  utils.html
_sources/: index.rst.txt
_sources/JOSS/: paper.md.txt
_sources/parts/: callbacks.rst.txt  constraint_monitor.rst.txt  technical_models.rst.txt  utils.rst.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  index.rst  make.bat
docs/JOSS/: Literature.bib  Literature.bib.bak  Literature.bib.sav  paper.md
docs/parts/: constraint_monitor.rst  core.rst  dc_extex_environment.rst  dc_shunt_environment.rst  environments.rst  pmsm_environment.rst  random_component.rst  readme.rst  technical_models.rst  technicalbackground.rst  utils.rst
docs/plots/: SCIM_Example.eps  SCML_Setting.eps
examples/: GEM_tutorial.ipynb  README.md  Simple_Controllers.ipynb  ddpg_pmsm_dq_current_control.py  ddpg_series_omega_control.py  dqn_series_current_control.py  external_speed_profile.py  numba_test.py  perm_DC_omega.py  perm_dc_omega.py  pi_series_omega_control.py  pi_series_omega_control_test_init.py  pmsm_foc.py  pmsm_mpc_dq_current_control.ipynb  readme.md  stable_baselines.py  tensorforce_example.py  user_defined_constraints.py  userdefined_constraints.py  userdefined_initialization.py
examples/agents/: simple_controllers.py
examples/classic_controllers/: batchprocessing_ex copy.py  classic_controllers.py  classic_controllers_dc_motor_example.py  classic_controllers_dc_motor_integration_test.py  classic_controllers_dc_motor_integration_test_2.py  classic_controllers_dc_motor_manual_example.py  classic_controllers_dc_motor_test.py  classic_controllers_ind_motor_example  classic_controllers_ind_motor_example.py  classic_controllers_synch_motor_example.py  classic_controllers_synch_motor_manual_example.py  classic_controllers_synch_motor_test.py  custom_classic_controllers_dc_motor_example.py  custom_classic_controllers_ind_motor_example.py  custom_classic_controllers_synch_motor_example.py  external_plot.py  externally_plot  externally_referenced_state_plot.py  integration_test_classic_controllers_dc_motor.py  perm_dc_omega.py  perm_dc_omega_control.py  pi_series_omega_control.py  pmsm_foc.py  simple_controllers.py  test_classic_controllers.py  test_classic_controllers_dc_motor.py  test_classic_controllers_synch_motor.py  tmp_test_file.py
examples/environment_features/: GEM_cookbook.ipynb  external_speed_profile.py  scim_ideal_grid_simulation.py  userdefined_constraints.py  userdefined_initialization.py
examples/example_notebooks/: GEM_cookbook.ipynb  GEM_tutorial.ipynb  MPC_example.ipynb  automated.py  getting_environment.py  keras_rl2_example.ipynb  requirements.txt  setting_environment.py  stable_baselines3_example.ipynb  tensorforce_example.ipynb  tensorforce_training.py
examples/gem_controllers/: example.py
examples/model_predictive_controllers/: gekko_mpc_cont_pmsm_example.ipynb  pmsm_mpc_dq_current_control.ipynb
examples/observers/: state_observer_example.py
examples/reinforcement_learning_controllers/: ddpg_pmsm_dq_current_control.py  ddpg_series_omega_control.py  dqn_series_current_control.py  keras_rl2_dqn_disc_pmsm_example.ipynb  stable_baselines3_ddpg_pmsm_dq_current_control.ipynb  stable_baselines3_dqn_disc_pmsm_example.ipynb  tensorforce_dqn_disc_pmsm_example.ipynb
gem_controllers/: __init__.py  gem_adapter.py  gem_controller.py  parameter_reader.py  pi_current_controller.py  pi_speed_controller.py  reference_plotter.py  torque_controller.py  utils.py
gem_controllers/stages/: stage.py  (+7 more)
gym_electric_motor/: __init__.py  callbacks.py  constraint_monitor.py  constraints.py  core.py  helper.py  random_component.py  utils.py
my_examples/: numba_test.py
parts/: callbacks.html  constraint_monitor.html  core.html  dashboard.html  dc_base_environment.html  dc_extex_environment.html  dc_permex_environment.html  dc_series_environment.html  dc_shunt_environment.html  environments.html  pmsm_environment.html  random_component.html  readme.html  technical_models.html  technicalbackground.html  utils.html
tests/: __init__.py  conf.py  functions_used_for_testing.py  human_visual_tests.py  test_callbacks.py  test_constraint_monitor.py  test_converters.py  test_core.py  test_electric_motors.py  test_environments.py  test_load.py  test_noise_generator.py  test_physical_systems.py  test_random_component.py  test_reference_generators.py  test_reward_functions.py  test_solvers.py  test_utils.py  test_visualization.py  test_voltage_supplies.py  testing_utils.py
(+1222 files in other folders)
