[project]
name = "gym_eletric_motor"
version = "2.1.0"
authors = [
    { name = "Arne Traue" },
    { name = "Gerrit Book" },
    { name = "Praneeth Balakrishna" },
    { name = "Pascal Peters" },
    { name = "Pramod Manjunatha" },
    { name = "Darius Jakobeit" },
    { name = "Felix Book" },
    { name = "Max Schenke" },
    { name = "Wilhelm Kirchgässner" },
    { name = "Oliver Wallscheid" },
    { name = "Barnabas Haucke-Korber" },
    { name = "Stefan Arndt" },
    { name = "Marius Köhler" },
]
description = "A Farama Gymnasium environment for electric motor control."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/upb-lea/gym-electric-motor"
Issues = "https://github.com/upb-lea/gym-electric-motor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["/src/gym_electric_motor", "/src/gem_controllers"]

[tool.ruff]
src = ["src"]
line-length = 120
